# alpine-cabin

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BOM.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PRESUPUESTO.md  README.en.md  README.md  SECURITY.md  SPEC.md
.control/: policy.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  build-log.yml  config.yml  engineering-review.yml  feature.yml
.github/workflows/: pages.yml  validate.yml
cad/: apply_experiment.py  bom_generator.py  budget_generator.py  cabin.py  dogfood.py  envelope.py  export_web_data.py  kpis.py  onshape_sync.py  parameters.py  params.toml  prices.toml  pyproject.toml  render_views.py  validate_cad.py
cad/templates/: BOM.md.j2  PRESUPUESTO.md.j2
docs/: NOTES.md  REFERENCE.md  SITE.md  real-world-plan.md
web/: index.html
web/css/: style.css
web/data/: cabin.glb  cabin_envelope.glb  construction-phases.json  kpis.json  params.json  prices.json
web/js/: app.js  cabin-builder.js  kpis.js  progress.js  state.js  tabs.js  theme.js  ui.js  viewer.js
