[project]
name = "alpine-cabin-cad"
version = "0.1.0"
description = "Parametric CAD + digital-twin pipeline for the alpine-cabin open-source build"
readme = "../README.md"
requires-python = ">=3.12"
license = { text = "CC-BY-SA-4.0" }
authors = [{ name = "Carlos D. Escobar-Valbuena" }]

dependencies = [
    "build123d>=0.9.0",
    "jinja2>=3.1.4",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
onshape = [
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
